// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`link > Should render link as ids-link 1`] = `
<div>
  <a
    class="ids-link ids-link--underlined"
    href="http://some-place.com"
  >
    Some link
  </a>
</div>
`;

exports[`link > Should render link with external icon when target is _blank 1`] = `
<div>
  <a
    class="ids-link ids-link--underlined"
    href="http://some-place.com"
    rel="noreferrer"
    target="_blank"
  >
    Some link
    <span
      class="ids-icon-external-link-small  ids-icon--text-end"
    />
  </a>
</div>
`;

exports[`tables > Should render mobile table 1`] = `
<table
  class="ids-table"
>
  <tbody>
    <tr>
      <th>
        First cell
      </th>
      <td>
        123
      </td>
    </tr>
    <tr>
      <th>
        Second cell
      </th>
      <td>
        Lorem ipsum
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`tables > Should render mobile table with row headers 1`] = `
<table
  class="ids-table"
>
  <thead>
    <tr>
      <th
        class="text-center"
        colspan="2"
      >
        Row heading
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <th>
        First cell
      </th>
      <td>
        1
      </td>
    </tr>
    <tr>
      <th>
        Second cell
      </th>
      <td>
        2
      </td>
    </tr>
    <tr>
      <th>
        Third cell
      </th>
      <td>
        3
      </td>
    </tr>
  </tbody>
</table>
`;
